# api/api.yml
@@ -8,13 +8,12 @@ components:
       type: object
       required:
         - name
-        - owner
         - state
         - progress
       properties:
         name:
           type: string
-        owner:
+        ownerId:
           type: string
         state:
           type: string
@@ -57,8 +56,6 @@ paths:
                     type: string
         '400':
           description: Bad request
-        '404':
-          description: Not Found
         '409':
           description: Conflict in insertion
         '500':
@@ -107,7 +104,5 @@ paths:
           description: Bad request
         '404':
           description: Not Found
-        '409':
-          description: Conflict
         '500':
           description: Internal server error
